--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s5.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s5.html
@@ -140,7 +140,7 @@ header {
 <p id="Lp2">ただ1人の男であり、王であるリベルはこの国の全ての女性を孕ませることになった。</p>
 
 <br><b><p><font size="5">5話 俺たちの居場所レジスト国〜全員を孕ませよ〜(♡2)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">強い日差しを受けて、今が朝なのだと実感し、目を覚ました。</p>
 <p id="L2">すると視界には何人もの全裸の女が映った。</p>
 <p id="L3"><br /></p>
@@ -191,6 +191,7 @@ header {
 <p id="L48"><br /></p>
 <p id="L49">それが、このセックス終了の合図だ。</p>
 <p id="L50">この場にいる嫁全員にキスをしてから、俺は服を着替え、食堂へと向かう。</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L51"><br /></p>
 <p id="L52">食堂では、既に、リオとツバサが座っていた。</p>
 <p id="L53"><br /></p>
@@ -217,6 +218,7 @@ header {
 <p id="L74"><br /></p>
 <p id="L75">このセックスをしているのは2人とも知っている。</p>
 <p id="L76">だから、俺達の食事は長いのだ。</p>
+<ins class="dmm-widget-placement" data-id="cce72faa1763810113b5c44ba56d0290" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="cce72faa1763810113b5c44ba56d0290"></script>
 <p id="L77"><br /></p>
 <p id="L78"><br /></p>
 <p id="L79">朝食の後は、城下町の見回り......という名のまだセックスをしていない嫁を探すのだ。</p>
@@ -255,6 +257,7 @@ header {
 <p id="L112"><br /></p>
 <p id="L113">いや、やってみたからこそ、俺の『異能』について知ることが出来た。</p>
 <p id="L114">この1日を繰り返すたびに、多く知ることが出来た。</p>
+<ins class="dmm-widget-placement" data-id="b33bcb6cc5eac61e6601cb269599cce1" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="b33bcb6cc5eac61e6601cb269599cce1"></script>
 <p id="L115"><br /></p>
 <p id="L116"><br /></p>
 <p id="L117">・まず、俺の『異能』についてだが、『女性を無条件に惚れさせることができ、さらに欲情させることができる』 というものの可能性が高い。</p>
@@ -313,6 +316,7 @@ header {
 <p id="L170">また、男を知らないこの国の女性たちも俺の異能により、さらに欲情仕切っていたというのもある。</p>
 <p id="L171"><br /></p>
 <p id="L172">拠点を手に入れたはいいが、すぐに潰れてしまっては元も子もない。</p>
+<ins class="dmm-widget-placement" data-id="e8beba96784805a9f84a65bf4c97b59a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e8beba96784805a9f84a65bf4c97b59a"></script>
 <p id="L173"><br /></p>
 <p id="L174"><br /></p>
 <p id="L175">これらの事を踏まえて、俺が今後、動くべき行動は</p>
@@ -323,6 +327,7 @@ header {
 <p id="L180"><br /></p>
 <p id="L181">だろう。</p>
 <p id="L182">とにかく、この国の女性全員を孕ますことが出来たら、他国へ行ってみる必要がありそうだ。</p>
+<ins class="dmm-widget-placement" data-id="269ae3ba985a848bbd0e2f04431859c6" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="269ae3ba985a848bbd0e2f04431859c6"></script>
 <p id="L183"><br /></p>
 <p id="L184"><br /></p>
 <p id="L185"><br /></p>
@@ -361,6 +366,7 @@ header {
 <p id="L218"><br /></p>
 <p id="L219">まずは、その事をツバサとリオに伝えなければならない。</p>
 <p id="L220">ちょうど、そろそろ朝食の時間だ。</p>
+<ins class="dmm-widget-placement" data-id="cb2f95c944e3090d0ca5c58ea6ffe12b" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="cb2f95c944e3090d0ca5c58ea6ffe12b"></script>
 <p id="L221">俺は着替えて食堂へと向かった。</p>
 <p id="L222"><br /></p>
 <p id="L223">食堂では、いつものように2人が待っていた。</p>
@@ -410,6 +416,7 @@ header {
 <p id="L267">「おっ、そっ、そうか、それはそれで......楽しみだなっ......////」</p>
 <p id="L268"><br /></p>
 <p id="L269">「それじゃあ、俺は今から出発の準備をしてくる。」</p>
+<ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
 <p id="L270"><br /></p>
 <p id="L271"><br /></p>
 <p id="L272">そう告げて、食堂から抜け、自室へと戻った。</p>
@@ -496,6 +503,7 @@ header {
 <p id="L353"><br /></p>
 <p id="L354">復讐するために！！</p>
 <p id="L355"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s4.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
