--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s6.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s6.html
@@ -143,6 +143,7 @@ header {
 <p id="Lp6"><br /></p>
 
 <br><b><p><font size="5">6話 リンクネクトへ 〜実験の準備〜(♡2)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">___？？？___</p>
 <p id="L2"><br /></p>
@@ -202,6 +203,7 @@ header {
 <p id="L56"><br /></p>
 <p id="L57"><br /></p>
 <p id="L58">「正確には、『使用している間は使えない』というもの つまり、使用する前の異能は残っているんだけどね_____せっかく生かしてやったんだ 面白くなってくれよ 」</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L59"><br /></p>
 <p id="L60"><br /></p>
 <p id="L61"><br /></p>
@@ -228,6 +230,7 @@ header {
 <p id="L82">「うんっ！」</p>
 <p id="L83"><br /></p>
 <p id="L84">リオの手を引いて、リンクネクトへ向かった。</p>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L85"><br /></p>
 <p id="L86">リンクネクト</p>
 <p id="L87">他国との繋がりが多く、仕事の依頼が多く集まる場所で全体的な大きさはレジストの数倍はありそうだ。</p>
@@ -251,6 +254,7 @@ header {
 <p id="L105">「なるほどな......しかし、兵を育てる施設が多いってのはこの風景を見てわかるが、どれが俺たちにあっているのか......」</p>
 <p id="L106"><br /></p>
 <p id="L107">「んー、とにかく、1番近くのあの場所にしよっか」</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L108"><br /></p>
 <p id="L109">リオの言葉に返事をした後、指で示した建物の中へと入った。</p>
 <p id="L110">その建物に入ると同時に指導者らしき人が説明を始めた。</p>
@@ -378,7 +382,7 @@ header {
 <p id="L232"><br /></p>
 <p id="L233">「あたしが相手になってやる！ さぁ構えろ！！」</p>
 <p id="L234"><br /></p>
-<p id="L235"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i457934/" target="_blank">【挿絵表示】</a></p>
+<p id="L235"><br /></p>
 <p id="L236"><br /></p>
 <p id="L237">竹刀の剣先をこちらに突きだした少女の見た目とは正反対の態度のデカさから、自分の実力に余程の自信があるのだと考えられる。</p>
 <p id="L238"><br /></p>
@@ -483,6 +487,7 @@ header {
 <p id="L337">「それじゃあ、今日のを元に、騎士コースか魔法コースか判断します。発表は、明日なので今日は専用の寮へ戻ってください。」</p>
 <p id="L338"><br /></p>
 <p id="L339">指導者はパチリと指を鳴らした。</p>
+<ins class="dmm-widget-placement" data-id="269ae3ba985a848bbd0e2f04431859c6" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="269ae3ba985a848bbd0e2f04431859c6"></script>
 <p id="L340"><br /></p>
 <p id="L341"><br /></p>
 <p id="L342">・ </p>
@@ -648,6 +653,7 @@ header {
 <p id="L502">そして、もし、俺の異能によるものだった場合、どこまで効くのか。</p>
 <p id="L503"><br /></p>
 <p id="L504">______調べさせてもらおうか</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s5.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
