--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s7.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s7.html
@@ -148,6 +148,7 @@ header {
 <p id="Lp11"><br /></p>
 
 <br><b><p><font size="5">7話 リンクネクトでの実験〜肉体改造〜(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">リオに合図を送り、フラスの両手を縛っていた鎖を解いて貰った。</p>
 <p id="L2">自由になったフラスだが、中出しする前の時のように抵抗する様子は無い。</p>
@@ -230,9 +231,10 @@ header {
 <p id="L79">「んむぐぅっ、はぁいっ.....んっ」</p>
 <p id="L80"><br /></p>
 <p id="L81">フランスはリオのおまんこを舐めながら、自分のアナルを両手で広げた。</p>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L82"><br /></p>
 <p id="L83"><br /></p>
-<p id="L84"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i376031/" target="_blank">【挿絵表示】</a></p>
+<p id="L84"><br /></p>
 <p id="L85"><br /></p>
 <p id="L86"><br /></p>
 <p id="L87">まずは、人差し指だ。</p>
@@ -350,6 +352,7 @@ header {
 <p id="L199">「やっ、私もっ、いっちゃうっ、フラスちゃんっ、飲んでっ！ 私のぉっ、受け取ってぇええええっーーーっっ！！！」</p>
 <p id="L200"><br /></p>
 <p id="L201">「むぐぅぅううううううううーーっ！！！ んっ、んむっ、じゅるるるぅぅっ、んっ」</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L202"><br /></p>
 <p id="L203">俺はペニスが届く1番奥で射精を行った。</p>
 <p id="L204">その、ペニスの射精によるビクッビクッという動きに合わさるかのように、フラスのアナルは痙攣を起こしながら、俺の精液をペニスから受け取っている。</p>
@@ -459,6 +462,7 @@ header {
 <p id="L308">再び口付けをし、俺は勃起したペニスをリオの濡れ濡れの性器に擦り付け、アピールをする。</p>
 <p id="L309">リオの割れ目がペニスを迎え入れようと開きかけて閉じるを繰り返している。</p>
 <p id="L310">どうやら、俺のペニスの形を覚えこんでいるようだ。</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L311"><br /></p>
 <p id="L312">「リオっ、入れたい。入れさせてくれっ」</p>
 <p id="L313"><br /></p>
@@ -554,6 +558,7 @@ header {
 <p id="L403"><br /></p>
 <p id="L404">数秒経つと、フラスは吸い付くのをやめた。どうやら飲み終わったのだろう。</p>
 <p id="L405">リオは、頬を赤らめながら、息が上がっている。</p>
+<ins class="dmm-widget-placement" data-id="269ae3ba985a848bbd0e2f04431859c6" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="269ae3ba985a848bbd0e2f04431859c6"></script>
 <p id="L406"><br /></p>
 <p id="L407">さて、質問だ。</p>
 <p id="L408"><br /></p>
@@ -665,6 +670,7 @@ header {
 <p id="L514">「フラス、もう一度、聞く。 俺のこと好きか......嫌いか？」</p>
 <p id="L515"><br /></p>
 <p id="L516">「それは......あぁっ♡______」</p>
+<ins class="dmm-widget-placement" data-id="cce72faa1763810113b5c44ba56d0290" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="cce72faa1763810113b5c44ba56d0290"></script>
 <p id="L517"><br /></p>
 <p id="L518">フラスは俺の顔を見ると、その表情がみるみるうちに変わっていき、真っ赤に染めあがっていく。</p>
 <p id="L519"><br /></p>
@@ -676,6 +682,8 @@ header {
 <p id="L525"><br /></p>
 <p id="L526"><br /></p>
 <p id="L527"><br /></p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s6.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
