--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -222,7 +222,13 @@ header {
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (57).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (58).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (59).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">
+<br>完全版
+<br><br>ファンザ 880円
+<br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_228366%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=text" rel="nofollow">復讐の異色眼兄妹〜種付けして完全催●〜 正義の虐殺と大義の強●</a>
+<br>DLサイト 880円
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ384292.html" target="_blank">復讐の異色眼兄妹～種付けして完全催眠～ 正義の虐殺と大義の強姦</a>
+
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
