--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s8.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s8.html
@@ -146,6 +146,8 @@ header {
 
 <br><b><p><font size="5">8話 訓練施設での朝と姉弟(♡2)</font></p></b>
 
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>		
+		
 <p id="L1">寮の窓から太陽の光が差す。</p>
 <p id="L2"><br /></p>
 <p id="L3">朝だ。</p>
@@ -282,6 +284,9 @@ header {
 <p id="L134">この名札はきっと訓練にも使われるものであるから、貰っておくとしよう。</p>
 <p id="L135"><br /></p>
 <p id="L136">「さて、食事も済ませたし、訓練へ行こうか」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
+
 <p id="L137"><br /></p>
 <p id="L138"><br /></p>
 <p id="L139">・</p>
@@ -518,6 +523,7 @@ header {
 <p id="L370">「はいっ......♡」</p>
 <p id="L371"><br /></p>
 <p id="L372">俺とリオとフラスはベットで再び、身体を交える。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <p id="L373"><br /></p>
 <p id="L374"><br /></p>
 <p id="L375"><br /></p>
@@ -717,6 +723,8 @@ header {
 <p id="L569">速く！</p>
 <p id="L570"><br /></p>
 <p id="L571">その風は鋭い刃物のようなものとなりて、リダ姉へ襲い掛かる！！！</p>
+<ins class="dmm-widget-placement" data-id="d22e1724380445c26150de13c2eb75cf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="d22e1724380445c26150de13c2eb75cf"></script>
+
 <p id="L572"><br /></p>
 <p id="L573"><br /></p>
 <p id="L574"><br /></p>
@@ -759,9 +767,6 @@ header {
 <p id="L611">ではっ、味わうとしよう。</p>
 <p id="L612"><br /></p>
 <p id="L613">「あむっ、んむちゅっ、んっ、おいひぃ、んっ」</p>
-<p id="L614"><br /></p>
-<p id="L615"><br /></p>
-<p id="L616"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i383680/" target="_blank">【挿絵表示】</a></p>
 <p id="L617"><br /></p>
 <p id="L618"><br /></p>
 <p id="L619">俺とリオはフラスのアナルから出ているアイスを食べ始め、ついにはアナルに食いつく。</p>
@@ -794,6 +799,8 @@ header {
 <p id="L646">そして、転移の異能を発動する。</p>
 <p id="L647"><br /></p>
 <p id="L648">___視界が流れるように移り変わる___</p>
+<br>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L649"><br /></p>
 <p id="L650">そして、ある家の扉の前にオレはいた。</p>
 <p id="L651">その家の周囲に建物があり、住宅地であると予想される。</p>
@@ -808,6 +815,8 @@ header {
 <p id="L660">「フラスさんの恋人なんですが、少し、お話したくて......」</p>
 <p id="L661"><br /></p>
 <p id="L662">「あらっフラスの......あっ♡ どうぞ、外で話すのは何なので、お上がりくださいっ♡」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s7.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
