--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s9.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s9.html
@@ -146,6 +146,7 @@ header {
 <p id="Lp9"><br /></p>
 
 <br><b><p><font size="5">9話 抱いてはいけない気持ちと人妻の罪(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">・</p>
 <p id="L2"><br /></p>
@@ -252,6 +253,8 @@ header {
 <p id="L103">リダ姉。</p>
 <p id="L104"><br /></p>
 <p id="L105">どうか_______気付かないでください。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L106"><br /></p>
 <p id="L107"><br /></p>
 <p id="L108"><br /></p>
@@ -628,7 +631,7 @@ header {
 <p id="L479"><ruby><rb>人妻</rb><rp>(</rp><rt>グラス</rt><rp>)</rp></ruby>は新しい命を宿すその日に、他の命を奪うだろう。</p>
 <p id="L480"><br /></p>
 <p id="L481"><br /></p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s8.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
