--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s10.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s10.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp7">まずは、1回目の復讐になります！</p>
 
 <br><b><p><font size="5">10話 人妻と命の略奪（♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <<p id="L1">・</p>
 <p id="L2"><br /></p>
@@ -384,7 +385,6 @@ header {
 <p id="L237"><br /></p>
 <p id="L238">「あぁっ、そろそろ、出そうだっ 子宮の入り口を開いて、吸い付いてくれっ 俺の、精液を全部搾り取れっ」</p>
 <p id="L239"><br /></p>
-<p id="L240"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i388815/" target="_blank">【挿絵表示】</a></p>
 <p id="L241"><br /></p>
 <p id="L242">次から次へと込上がってくる精液を全部、リオの中へ注ぎ込む。</p>
 <p id="L243">腰が勝手に振動しつつ、今ある快楽の波に呑まれていく。</p>
@@ -546,7 +546,6 @@ header {
 <p id="L399"><br /></p>
 <p id="L400">それを認識した瞬間、リオの手には先程の形状の炎ではなく、太く直線のような______レーザー状の炎の光線が放たれていた！！</p>
 <p id="L401"><br /></p>
-<p id="L402"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i387413/" target="_blank">【挿絵表示】</a></p>
 <p id="L403"><br /></p>
 <p id="L404">「_______っっっっ！！！！」</p>
 <p id="L405"><br /></p>
@@ -617,6 +616,8 @@ header {
 <p id="L470">「うわぁ......」</p>
 <p id="L471"><br /></p>
 <p id="L472">「こんなことは初めてで、こっちも驚愕しているんだ！ 君たちは絶対に凄い戦士になるよ！！」</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L473"><br /></p>
 <p id="L474"><br /></p>
 <p id="L475">・</p>
@@ -682,6 +683,7 @@ header {
 <p id="L535">「今から僕が説明しますので、その通りにしてください」</p>
 <p id="L536"><br /></p>
 <p id="L537">「はい......っ♡♡」 </p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <p id="L538"><br /></p>
 <p id="L539"><br /></p>
 <p id="L540">・</p>
@@ -754,6 +756,7 @@ header {
 <p id="L607">すると、芯から暑く、ほかほかになってき......た。</p>
 <p id="L608">しかいが。ゆがんで......</p>
 <p id="L609">なにも。みえ。な......く......。</p>
+<ins class="dmm-widget-placement" data-id="f23c6bc9330a0202cb6e91036649af07" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="f23c6bc9330a0202cb6e91036649af07"></script>
 <p id="L610"><br /></p>
 <p id="L611"><br /></p>
 <p id="L612">・</p>
@@ -853,6 +856,7 @@ header {
 <p id="L706"><br /></p>
 <p id="L707"><br /></p>
 <p id="L708">______笑っていた。</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L709"><br /></p>
 <p id="L710"><br /></p>
 <p id="L711"><br /></p>
@@ -895,6 +899,7 @@ header {
 <p id="L748">染色液ではない。</p>
 <p id="L749"><br /></p>
 <p id="L750">全て、『血液』でだ。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s9.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
