--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s11.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s11.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp7">グロ注意は始めにあるので苦手な方は中盤までいけば大丈夫です！</p>
 
 <br><b><p><font size="5">11話 事件現場より快楽を クエストより快感を（♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「......ありゃあ、これは派手に<ruby><rb>殺</rb><rp>（</rp><rt>や</rt><rp>）</rp></ruby>ったねぇ」</p>
 <p id="L2"><br /></p>
@@ -347,6 +348,8 @@ header {
 <p id="L200">「......はい♡」</p>
 <p id="L201"><br /></p>
 <p id="L202">私は、イソギのおまんこに無我夢中で食い付いた。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L203"><br /></p>
 <p id="L204"><br /></p>
 <p id="L205">・</p>
@@ -473,6 +476,7 @@ header {
 <p id="L326"><br /></p>
 <p id="L327"><br /></p>
 <p id="L328">俺たちは再び、口付けを交わして、セックスを始めた。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <p id="L329"><br /></p>
 <p id="L330"><br /></p>
 <p id="L331">・</p>
@@ -569,6 +573,7 @@ header {
 <p id="L422">俺はリオと母娘を連れて、部屋から出ると同時に褐色で金髪の女性が飛び込み、抱きついて来た！</p>
 <p id="L423"><br /></p>
 <p id="L424">「会いたかったぞっ私の王ー！......む？ 見慣れぬ、その2人はなんだ？」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s10.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
