--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s12.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s12.html
@@ -145,6 +145,7 @@ header {
 <p id="Lp8"><br /></p>
 
 <br><b><p><font size="5">12話 国おこしの計画(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">「......あぁ、こっちの2人はレジスト国で預かることになったんだ 今日から俺たちの国民ってわけだ」</p>
 <p id="L2"><br /></p>
@@ -480,6 +481,8 @@ header {
 <p id="L332">頭を適当に撫でると、甘えながら掃除フェラをしてきた。</p>
 <p id="L333"><br /></p>
 <p id="L334">そのおかけで、またムラムラとした俺たちは、2、3回ほど種付けセックスをした。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L335"><br /></p>
 <p id="L336">「はぁっ、はぁっ......さてと、俺はそろそろ___」</p>
 <p id="L337"><br /></p>
@@ -619,8 +622,9 @@ header {
 <p id="L471">「うんっ！ いってらっしゃいっ」</p>
 <p id="L472"><br /></p>
 <p id="L473">___俺はその言葉の後に瞳を閉じ、リオの異能で、リンクネクトへ転移する___</p>
-<p id="L474"><br /></p>
-<p id="L475"><br /></p>
+
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s11.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
