--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s13.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s13.html
@@ -143,7 +143,7 @@ header {
 <p id="Lp6"><br /></p>
 
 <br><b><p><font size="5">13話『グローズ』と討伐クエスト(♡1)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">リンクネクトへ戻って来た俺は早速、フードを深く被り、何事も無かったかのように、ギルドへと向かった。</p>
 <p id="L2"><br /></p>
 <p id="L3">そのギルドの扉を開けると、いつものようにガヤガヤと騒がしい......のだが、大勢の人が1箇所に集まって円を作っていた。</p>
@@ -214,6 +214,8 @@ header {
 <p id="L68">それは、この円を作っている人達からも同じ視線を感じるものである。</p>
 <p id="L69"><br /></p>
 <p id="L70">......なるほど、面倒事を押し付けたのか。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L71"><br /></p>
 <p id="L72"><br /></p>
 <p id="L73">・</p>
@@ -233,7 +235,6 @@ header {
 <p id="L87"><br /></p>
 <p id="L88">「へぇ〜リベルぅっていぅんだぁー きゃわたん〜 うちゎスイカっ、『スイカ・カジュート』 よろっ☆」</p>
 <p id="L89"><br /></p>
-<p id="L90"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i399711/" target="_blank">【挿絵表示】</a></p>
 <p id="L91"><br /></p>
 <p id="L92">『スイカ・カジュート』</p>
 <p id="L93">黒髪に、緑色のメッシュを入れているツインテールで、頭の弱そうな独特な喋り方をしている女の子。</p>
@@ -243,7 +244,6 @@ header {
 <p id="L97"><br /></p>
 <p id="L98">「......私はメロン。『メロン・ロンロンポール』。そして、隣の小喧しい女が______」</p>
 <p id="L99"><br /></p>
-<p id="L100"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i399712/" target="_blank">【挿絵表示】</a></p>
 <p id="L101"><br /></p>
 <p id="L102">『メロン・ロンロンポール』</p>
 <p id="L103">薄めの緑髪の少女。</p>
@@ -252,8 +252,6 @@ header {
 <p id="L106"><br /></p>
 <p id="L107">「何がやかましい女よ！！ 私は『イチゴ・チコ』！！ てかさ、私らの事なんてどーでもいいでしょ！！ 問題はあんたよ、あんた！！」</p>
 <p id="L108"><br /></p>
-<p id="L109"><br /></p>
-<p id="L110"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i399710/" target="_blank">【挿絵表示】</a></p>
 <p id="L111"><br /></p>
 <p id="L112">『イチゴ・チコ』</p>
 <p id="L113">真っ赤な髪の女の子で、強気な雰囲気を出しているのは、その実力が故か。</p>
@@ -588,6 +586,8 @@ header {
 <p id="L442">「......いっぱい。」</p>
 <p id="L443"><br /></p>
 <p id="L444">「はめちゃお〜♡！！」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
 
 <br><br><a href="fukusyu-no-oltudoaizu-s12.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
