--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s14.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s14.html
@@ -146,6 +146,7 @@ header {
 <p id="Lp9">多少ハードかもしれませんが、それでもよい方はどぞっ！</p>
 
 <br><b><p><font size="5">14話『グローズ』とのクエスト帰りに性行為を(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">『ガルッス・レクス・ドメスティクス』を討伐し終えた俺と『グローズ』は帰りの馬車へと向かっていた。</p>
 <p id="L2"><br /></p>
@@ -338,6 +339,8 @@ header {
 <p id="L189"><br /></p>
 <p id="L190">俺の素顔を見た時点で俺に惚れて性欲は極限まで上げられている。</p>
 <p id="L191">そんな状態なら、俺とヤるためにある程度の言うことを聞いてしまうのだろう。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L192"><br /></p>
 <p id="L193">・</p>
 <p id="L194"><br /></p>
@@ -529,6 +532,7 @@ header {
 <p id="L380">......。</p>
 <p id="L381"><br /></p>
 <p id="L382">まだ、リンクネクトまで時間があるため、『グローズ』の3人同時に着くまでの間、フェラをさせることにした。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s13.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
