--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s15.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s15.html
@@ -134,6 +134,7 @@ header {
  <div class="main">
     	<div class="main-contents">
         <br><br><br><br><br><br><br><b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="Lp1">口内射精</p>
 <p id="Lp2">フェラ、イラマチオ</p>
@@ -399,6 +400,8 @@ header {
 <p id="L254">俺は人目のつかない所へ行き___と言っても夜であるためそもそも人が出てないが___リオの異能の発動を待つ......。</p>
 <p id="L255"><br /></p>
 <p id="L256">___数秒のうちに視界が流れるように変化する___</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L257"><br /></p>
 <p id="L258">視界が一定に定まると、俺は自分の部屋にいて、目の前に全裸となっているリオがいた。</p>
 <p id="L259"><br /></p>
@@ -582,7 +585,7 @@ header {
 <p id="L437">「え？ それじゃあ、それどうするの？」</p>
 <p id="L438"><br /></p>
 <p id="L439">「少し......試して見たいことがあってね」</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s14.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
