--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s16.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s16.html
@@ -144,6 +144,7 @@ header {
 <p id="Lp7"><br /></p>
 
 <br><b><p><font size="5">16話 受付嬢と飲食店デート 〜トイレで店員に種付けを〜（♡3）</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">翌日の朝、リオの膣内に数回中出しをしてから、再びリンクネクトへ送って貰った。</p>
 <p id="L2"><br /></p>
@@ -297,6 +298,8 @@ header {
 <p id="L150">「はいっ、待ってます////」</p>
 <p id="L151"><br /></p>
 <p id="L152">頬を赤らめながら、笑みを浮かべたアスクを尻目に俺はテーブルから離れた。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L153"><br /></p>
 <p id="L154">一緒にトイレに来いって意味だったんだが......失敗か。</p>
 <p id="L155">もちろん、この場合のこともしっかりと考えてある。</p>
@@ -530,6 +533,7 @@ header {
 <p id="L383">「ん？ どうしましたリベルさん？」</p>
 <p id="L384"><br /></p>
 <p id="L385">「僕、アスクさんのことが好きです」</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
 <br><br><a href="fukusyu-no-oltudoaizu-s15.html"><b><p><font size="5">＜</font></p></b></a>
