--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s17.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s17.html
@@ -135,6 +135,7 @@ header {
     	<div class="main-contents">
         <br><br><br><br><br><br><br><b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
 
+
 <p id="Lp1">食ザー(ホットケーキにザーメンぶっかけ)</p>
 <p id="Lp2">メープルシロップをペニスにかけて舐めさせる。</p>
 <p id="Lp3">中出し</p>
@@ -143,6 +144,8 @@ header {
 <p id="Lp6">店内で種付け(テーブルの下)</p>
 
 <br><b><p><font size="5">17話 偽りの告白で店内で〜前は精液、後ろはメープルシロップ〜(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+
 
 <p id="L1">「えっ、えぇ！？ そ、そんな、リベルさんが私を......////」</p>
 <p id="L2"><br /></p>
@@ -416,6 +419,8 @@ header {
 <p id="L270"><br /></p>
 <p id="L271">どぷっどぷっ......というペニスの孕ませて自分のものにする気まんまんの中出し射精と同時に、俺は、アスクのアナルにある味付け用のメープルシロップのボトルを握る！！</p>
 <p id="L272">それによって、アスクのアナルにメープルシロップが、まるで射精のように、流れ込んでいくっ......！！</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L273"><br /></p>
 <p id="L274">「んっ、あっ、あぁっ.....気持ちいいっ.... どうだ？ アスク、おまんこには俺の精液っ、アナルにはメープルシロップの同時中出し...... 気持ちいいだろっ」</p>
 <p id="L275"><br /></p>
@@ -474,6 +479,7 @@ header {
 <p id="L328">さらに既に全員、催眠状態となっている______</p>
 <p id="L329"><br /></p>
 <p id="L330">______つまり、俺の宿屋だ。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
 <br><br><a href="fukusyu-no-oltudoaizu-s16.html"><b><p><font size="5">＜</font></p></b></a>
