--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s18.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s18.html
@@ -147,7 +147,7 @@ header {
 <p id="Lp10"><br /></p>
 
 <br><b><p><font size="5">18話 俺の宿屋〜メイドの舌で身体を洗い、ハーレム乱交を〜(♡3)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">「俺とアスクですぐにセックスに入るから準備してくれ」</p>
 <p id="L2"><br /></p>
 <p id="L3">「かしこまりましたっ♡♡ ではっ、準備している間に<ruby><rb>私</rb><rp>(</rp><rt>わたくし</rt><rp>)</rp></ruby>どもがお身体を洗いますので......服を♡」</p>
@@ -313,6 +313,9 @@ header {
 <p id="L163">「んっ......ふうっ、じゃ行ってくるな」</p>
 <p id="L164"><br /></p>
 <p id="L165">ペニスをアスクの口の中に突っ込んで尿を済ませてから、俺は宿屋を出てギルドへと向かう。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
+
 <p id="L166">......と言っても、ギルド前へはこの裏口からのルートを通ることにより、数分待つことなく、すぐに着くことができた。</p>
 <p id="L167"><br /></p>
 <p id="L168">ギルド前では、数十人ほどの人が集まっており、その中で、丁度よく、『グローズ』の3人たちの姿を目にした。</p>
@@ -495,7 +498,7 @@ header {
 <p id="L345">すると、メス達はすぐに俺のペニスを受け入れられるように______あるいは、俺とのセックスのイメージトレーニングとして、自身のおまんこに触れて、くちゅくちゅと音を鳴らしながら、自慰行為を始めた。</p>
 <p id="L346"><br /></p>
 <p id="L347">この場の女たち全員が俺と交尾したいのと同じように______俺もこの女たち全員に精液を注ぎ込みたいのだ。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s17.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
