--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s19.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s19.html
@@ -146,7 +146,7 @@ header {
 <p id="Lp9">始めに、リベルの乱交の続きがありますっ</p>
 
 <br><b><p><font size="5">19話 レジスト国の準備とおにぃちゃんのベッドで自慰行為(♡3)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 <p id="L1">「うそぉっ、うそぉっ♡♡ おちんぽっ♡ 最高ぉっ♡♡ 気持ちいいのがっ、奥に届いてくるぅっ♡♡っ！！」</p>
 <p id="L2"><br /></p>
 <p id="L3">「そうだっ、んっ、ここが気持ちいいんだろっ？ 俺のカリ高ちんぽで引っ掻き回してやるから、とっととイケっ！！ イキまくれっ！！」</p>
@@ -278,6 +278,8 @@ header {
 <p id="L129">俺が3人としている間、他の女___アスクやメイドたちを含む___は女同士でありながらも、それぞれの相手を見つけ、お互いに愛し合っているようで、くちゅくちゅと水気の含んだ音が耳に入ってくる。</p>
 <p id="L130">どうやら、この女たちとの乱交は続きそうである。</p>
 <p id="L131">______もっとも、俺自身もまだまだ楽しむ予定であるため好都合だが。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L132"><br /></p>
 <p id="L133"><br /></p>
 <p id="L134"><br /></p>
@@ -490,7 +492,8 @@ header {
 <p id="L341">お互いの名前を呼びながらの行為をしていたが、心の中では、ずっとおにぃちゃんのことばっかり......っ♡♡</p>
 <p id="L342"><br /></p>
 <p id="L343">______おにぃちゃん大好き♡</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+		
 <br><br><a href="fukusyu-no-oltudoaizu-s18.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s20.html"><b><p><font size="5">＞</font></p></b></a>
