--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s20.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s20.html
@@ -150,7 +150,8 @@ header {
 <p id="Lp13"><br /></p>
 
 <br><b><p><font size="5">20話 俺の子を孕みたいのなら、金と手駒を〜ギルドの奥の部屋で〜(♡3)</font></p></b>
-
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
+		
 <p id="L1">「あぁぁぁぁぁぁぁっ♡♡ リベルっお願いっ♡♡ 私っ、欲しいっ♡♡ リベルとの赤ちゃん欲しいっ♡♡ お願い、私欲しいのっ！孕みたいっ！ 孕ませてぇっ♡♡」</p>
 <p id="L2"><br /></p>
 <p id="L3">現在、一通りの女を抱き終えた後、最後の仕上げとして最も盛っているイチゴとの<ruby><rb>性行為</rb><rp>(</rp><rt>セックス</rt><rp>)</rp></ruby>を楽しんでいる______体位は騎乗位だ。</p>
@@ -276,6 +277,8 @@ header {
 <p id="L123"><br /></p>
 <p id="L124">裏ルートを通っているからと言って、油断はできないため、周囲の目を気にしながら平常心を保ちつつ人混みの中へ紛れ込み、その人混みの波に乗りながらも、目的地であるギルドの中へ入った。</p>
 <p id="L125">すると、ギルド内はまだ何人か残っていたため、空いている椅子に腰掛けて、受付嬢が1人になるまで待っていることにした。</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L126"><br /></p>
 <p id="L127">______数分経つと、ようやく受付嬢だけとなった。いや、正確には、受付嬢と警備兵だけとなったのだ。</p>
 <p id="L128">どうやら、この時間帯はまだ警備兵の仕事の時間内のようで、5、6人配置されており、不審な所が無いか辺りを見回して警戒している。</p>
@@ -539,7 +542,7 @@ header {
 <p id="L386">だが、その悪臭からは、隠し切れないフェロモンと、性欲向上の作用を持っており、何故か心地よく感じ、何度も身体を求める。</p>
 <p id="L387"><br /></p>
 <p id="L388">欲望にまみれたいやらしい音を部屋中に響かせながら、今ある俺の性欲を沈め、帰ってリオと新鮮な<ruby><rb>性行為</rb><rp>(</rp><rt>セックス</rt><rp>)</rp></ruby>をするために、この女と身体を重ねた......。</p>
-
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s19.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
