--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s21.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s21.html
@@ -152,11 +152,14 @@ header {
 <p id="Lp13"><br /></p>
 
 <br><b><p><font size="5">21話 温泉でリオとイチャイチャ孕まセックス〜ボディソープで身体を重ね合う〜(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">2人目の受付嬢を完全に落とした俺は、ある程度の金を巻き上げて、ギルドから出た。</p>
 <p id="L2">人目の付かないところまで移動すると、1～2分後にリオの異能が発動する。</p>
 <p id="L3"><br /></p>
 <p id="L4">______俺はそれに合わせて瞳を閉じた______</p>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L5"><br /></p>
 <p id="L6">閉じていた瞳を開くと視界に広がったのは......いわゆる大浴場と呼ぶ場所だった。</p>
 <p id="L7"><br /></p>
@@ -502,6 +505,7 @@ header {
 <p id="L347">愛し合う2人にしか理解できないもの______</p>
 <p id="L348"><br /></p>
 <p id="L349">______それこそが、<ruby><rb>真実</rb><rp>(</rp><rt>おれたち</rt><rp>)</rp></ruby>の愛なんだから。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 
 <br><br><a href="fukusyu-no-oltudoaizu-s20.html"><b><p><font size="5">＜</font></p></b></a>
